# video_segment

./: Dockerfile  LICENSE  README.md
base/: CMakeLists.txt  base.cpp  base.h  base_impl.cpp  base_impl.h  depend.cmake
cmake/: FindFFMPEG.cmake  FindGFlags.cmake  FindGLog.cmake  FindGooglePerfTools.cmake  FindJsonCpp.cmake  FindOpenCV.cmake  FindOpenCV2.cmake  common.cmake
imagefilter/: CMakeLists.txt  depend.cmake  image_filter.cpp  image_filter.h  image_util.h
seg_tree_sample/: CMakeLists.txt  depend.cmake  seg_tree.cpp
segment_converter/: CMakeLists.txt  converter.cpp  depend.cmake
segment_renderer/: CMakeLists.txt  depend.cmake  renderer.cpp
segment_util/: CMakeLists.txt  depend.cmake  segmentation.proto  segmentation_boundary.cpp  segmentation_boundary.h  segmentation_io.cpp  segmentation_io.h  segmentation_render.cpp  segmentation_render.h  segmentation_util.cpp  segmentation_util.h
segment_viewer/: CMakeLists.txt  depend.cmake  viewer.cpp
segmentation/: CMakeLists.txt  boundary.cpp  boundary.h  dense_seg_graph_interface.cpp  dense_seg_graph_interface.h  dense_segmentation.cpp  dense_segmentation.h  dense_segmentation_graph.cpp  dense_segmentation_graph.h  depend.cmake  histograms.cpp  histograms.h  pixel_distance.cpp  pixel_distance.h  region_descriptor.cpp  region_descriptor.h  region_segmentation.cpp  region_segmentation.h  region_segmentation_graph.cpp  region_segmentation_graph.h  segmentation.cpp  segmentation.h  segmentation_common.cpp  segmentation_common.h  segmentation_graph.cpp  segmentation_graph.h  segmentation_unit.cpp  segmentation_unit.h
video_display_qt/: CMakeLists.txt  depend.cmake  main_window.cpp  main_window.h  video_display_qt_unit.cpp  video_display_qt_unit.h
video_example/: CMakeLists.txt  depend.cmake  test_video.MOV  video_example.cpp
video_framework/: CMakeLists.txt  concurrent_queue.h  conversion_units.cpp  conversion_units.h  depend.cmake  flow_reader.cpp  flow_reader.h  video_capture_unit.cpp  video_capture_unit.h  video_display_unit.cpp  video_display_unit.h  video_pipeline.cpp  video_pipeline.h  video_reader_unit.cpp  video_reader_unit.h  video_unit.cpp  video_unit.h  video_writer_unit.cpp  video_writer_unit.h
